# tapp-sample-teaparty

./: .gitignore
party-actor/: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json
party-actor/keys/: account.nk  account.txt  module.nk  module.txt
party-actor/src/: api.rs  balance.rs  channel.rs  help.rs  lib.rs  message.rs  notification.rs  query_cb.rs  request.rs  state.rs  test.rs  txn_cb.rs  types.rs  user.rs  utility.rs  validating.rs  wf.rs
party-actor/src/balance/: operation.rs
party-actor/src/utility/: p2p_send.rs
party-fe/: .env.prod  .env.stage  .env.test  .gitignore  ipfs.sh  package-lock.json  package.json  readme.md  vue.config.js
party-fe/public/: index.html
party-fe/public/tea_logo/: Tea Project - logo-1.svgz  favicon-T.ai
party-fe/shell/: prod.sh  stage.sh
party-fe/src/: App.vue  filter.js  main.js  request.js  router.js  style.scss
party-fe/src/assets/: error.js  string.js
party-fe/src/components/: ComingSoon.vue  JsonEditor.vue  PageFooter.vue  PageHeader.vue  QRCodeModal.vue  TeaIconButton.vue  TeaTable.vue
party-fe/src/css/: tea-card.scss  tea-notify.scss  tea-toast.scss
party-fe/src/elementui-style/: autocomplete.css  backtop.css  badge.css  breadcrumb.css  button.css  calendar.css  cascader-panel.css  cascader.css  checkbox.css  collapse.css  color-picker.css  date-picker.css  dialog.css  dropdown.css  index.css  input-number.css  input.css  link.css  loading.css  menu.css  message-box.css  option.css  pagination.css  progress.css  radio-button.css  radio.css  reset.css  select-dropdown.css  select.css  slider.css  step.css  switch.css  table-column.css  table.css  tabs.css  tag.css  time-picker.css  time-select.css  timeline-item.css  transfer.css  (+2 more)
party-fe/src/protobuf/: protobuf.json
party-fe/src/shared/libs/: QRCode.js
party-fe/src/shared/utility/: Log.js  ed25519.js
party-fe/src/store/: clog.js  index.js  modal.js
party-fe/src/tea/: http.js  index.js  layer1.js  moment-precise-range.js  tapp.js  types.json  utils.js
party-fe/src/tea/__tests__/: utils.spec.js
party-fe/src/views/: Home.vue  LogView.vue  LoginAccount.vue  MessageList.vue  MyNotification.vue  PostMsg.vue  TappProfile.vue  Test.vue  bbs.js  txn.js  user.js
party-fe/src/views/log/: Index.vue
party-fe/src/views/modals/: CommonFormModal.vue  CommonTxModal.vue  DataDetailsModal.vue  LogDetailsModal.vue  LoginModal.vue  TransferBalanceModal.vue
party-fe/src/views/tabs/: Consume.vue  Expense.vue  Others.vue  Reward.vue
party-fe/src/workflow/: Auction.js  Base.js  Home.js  SettingAccount.js  Test.js
party-shared/: Cargo.toml
party-shared/src/: lib.rs
party-state-actor/: Cargo.toml  Makefile  build.rs
party-state-actor/.keys/: account.nk  module.nk  module.txt
party-state-actor/src/: layer1_event.rs  lib.rs  state.rs
