[package]
name = "party-actor"
version = "0.1.1"
authors = ["kevingzhang <kevin.zhang.canada@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
bincode = "1.2.1"
serde = {version = "1.0.106", features = ["derive"]}
serde_derive = "1.0.106"
prost = "0.6.1"
serde_json = "1.0.55"
base64 = "0.12.2"
base58 = "0.1.0"
hex = "0.4.2"
anyhow = "1.0.34"
num-traits = "0.2"
str-utils = "0.1.5"
num-bigint = {version = "0.2", features = ["serde"]}
wascc-actor = { git = "https://github.com/tearust/wascc-actor", branch = "nitro" }


tea-actor-utility = { path="../../mini-runtime/actors/utility" }
vmh-codec = { path = "../../mini-runtime/vmh-codec" }
actor-txns = { path = "../../mini-runtime/defs/actor-txns"}
tea-codec = {path="../../tea-codec"}

interface = {path = "../../statemachine/interface"}
party-shared = { path = "../party-shared" }

[features]
__test = ["tea-actor-utility/__test" ]
